@@ -1,3 +1,8 @@
+2012-02-10  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-default-send-mail-function): Made into own
+	function for reuse by emacsbug.el.
+
 2012-02-09  Juanma Barranquero  <lekktu@gmail.com>
 
 	* gnus.el (gnus-method-ephemeral-p): Move after declaration of defsubst
